# LearnOpenGL

./: CMakeLists.txt  LICENSE  README.md
include/glad/: glad.h
include/learnopengl/: shader_s.h
src/: glad.c
src/1_getting_started/1_1_hello_window/: hello_window.cpp
src/1_getting_started/1_3_hello_triangle/: hello_tringle.cpp
src/1_getting_started/2_2_hello_triangle_indexed/: hello_triangle_indexed.cpp
src/1_getting_started/2_3_hello_triangle_exercise_1/: 2_3_hello_triangle_exercise_1.cpp
src/1_getting_started/2_4_hello_triangle_exercise_2/: 2_4_hello_triangle_exercise_2.cpp
src/1_getting_started/2_5_hello_triangle_exercise_3/: 2_5_hello_triangle_exercise_3.cpp
src/1_getting_started/3_1_shaders_uniform/: shaders_uniform.cpp
src/1_getting_started/3_2_shaders_interpolation/: shaders_interpolation.cpp
src/1_getting_started/3_3_shaders_class/: shaders_class.cpp
src/1_getting_started/3_4_shaders_exercise1/: shaders_exercise1.cpp
src/1_getting_started/3_5_shaders_exercise2/: 3_5_shader.vs  shaders_exercise2.cpp
src/1_getting_started/3_6_shaders_exercise3/: 3_6_shader.vs  shaders_exercise3.cpp
